Finished parsing Hollow Knight data

--- a/notebooks/initial_base_data_exploration.ipynb
+++ b/notebooks/initial_base_data_exploration.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "# Use display(dataframe) to show\n",
     "\n",
     "# FILEPATH\n",
-    "filepath = \"../private/vgt-corpora\""
+    "filepath = \"../private/vgt_corpora\""
    ]
   },
   {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -527,14 +527,12 @@
     "\n",
     "# To quote Ross Geller: \"PIVOT, PIVOT, PIVOT\"\n",
     "elder_scrolls_df = elder_scrolls_df.transpose()\n",
-    "display(elder_scrolls_df.head())\n",
-    "\n",
-    "# Make the indices a column"
+    "display(elder_scrolls_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1713,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1730,7 +1728,163 @@
     "***\n",
     "# Torchlight Data:\n",
     "\n",
-    "**PLEASE NOTE** This data is stored in both a .csv and a .json. However, they made a script to more easily navigate the data. Please see [orignal documentation](https://github.com/hmi-utwente/video-game-text-corpora/tree/master/Torchlight%20II). "
+    "**PLEASE NOTE** This data is stored in both a .csv and a .json. Please see [orignal documentation](https://github.com/hmi-utwente/video-game-text-corpora/tree/master/Torchlight%20II) for more information (no, the script doesn't work, I tried). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>speaker</th>\n",
+       "      <th>text</th>\n",
+       "      <th>dialogtype</th>\n",
+       "      <th>quest_displayname</th>\n",
+       "      <th>quest_name</th>\n",
+       "      <th>questfile</th>\n",
+       "      <th>speaker_unit</th>\n",
+       "      <th>unitfile</th>\n",
+       "      <th>raw_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Felicia</td>\n",
+       "      <td>You seem weary - perhaps you are in need of a ...</td>\n",
+       "      <td>complete</td>\n",
+       "      <td>The Adventure Continues</td>\n",
+       "      <td>global_newgameplus</td>\n",
+       "      <td>QUESTS/GLOBAL_NEWGAMEPLUS.DAT</td>\n",
+       "      <td>RETIREMENTCHARACTERQUEST</td>\n",
+       "      <td>MEDIA/UNITS/MONSTERS/NPC/RETIREMENTCHARACTERQU...</td>\n",
+       "      <td>You seem weary - perhaps you are in need of a ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bounty Board</td>\n",
+       "      <td>BOUNTY!\\nThe Sturmbeorn raiders are a threat t...</td>\n",
+       "      <td>intro</td>\n",
+       "      <td>Bounty: Sturmbeorn!</td>\n",
+       "      <td>a1z1-bountyboard2</td>\n",
+       "      <td>QUESTS/A1Z1-BOUNTYBOARD2.DAT</td>\n",
+       "      <td>BOUNTYBOARD</td>\n",
+       "      <td>MEDIA/UNITS/MONSTERS/BOUNTYBOARD/BOUNTYBOARD.DAT</td>\n",
+       "      <td>BOUNTY!\\n\\nThe Sturmbeorn raiders are a threat...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bounty Board</td>\n",
+       "      <td>The Sturmbeorn have been conducting raids in n...</td>\n",
+       "      <td>return</td>\n",
+       "      <td>Bounty: Sturmbeorn!</td>\n",
+       "      <td>a1z1-bountyboard2</td>\n",
+       "      <td>QUESTS/A1Z1-BOUNTYBOARD2.DAT</td>\n",
+       "      <td>BOUNTYBOARD</td>\n",
+       "      <td>MEDIA/UNITS/MONSTERS/BOUNTYBOARD/BOUNTYBOARD.DAT</td>\n",
+       "      <td>The Sturmbeorn have been conducting raids in n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bounty Board</td>\n",
+       "      <td>The Empire thanks you for your valuable servic...</td>\n",
+       "      <td>complete</td>\n",
+       "      <td>Bounty: Sturmbeorn!</td>\n",
+       "      <td>a1z1-bountyboard2</td>\n",
+       "      <td>QUESTS/A1Z1-BOUNTYBOARD2.DAT</td>\n",
+       "      <td>BOUNTYBOARD</td>\n",
+       "      <td>MEDIA/UNITS/MONSTERS/BOUNTYBOARD/BOUNTYBOARD.DAT</td>\n",
+       "      <td>The Empire thanks you for your valuable servic...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kill 10 Sturmbeorn in the Temple Steppes, then...</td>\n",
+       "      <td>details</td>\n",
+       "      <td>Bounty: Sturmbeorn!</td>\n",
+       "      <td>a1z1-bountyboard2</td>\n",
+       "      <td>QUESTS/A1Z1-BOUNTYBOARD2.DAT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kill 10 |cFFA1D0FCSturmbeorn|u in the |cFFA1D0...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        speaker                                               text dialogtype  \\\n",
+       "0       Felicia  You seem weary - perhaps you are in need of a ...   complete   \n",
+       "1  Bounty Board  BOUNTY!\\nThe Sturmbeorn raiders are a threat t...      intro   \n",
+       "2  Bounty Board  The Sturmbeorn have been conducting raids in n...     return   \n",
+       "3  Bounty Board  The Empire thanks you for your valuable servic...   complete   \n",
+       "4           NaN  Kill 10 Sturmbeorn in the Temple Steppes, then...    details   \n",
+       "\n",
+       "         quest_displayname          quest_name                      questfile  \\\n",
+       "0  The Adventure Continues  global_newgameplus  QUESTS/GLOBAL_NEWGAMEPLUS.DAT   \n",
+       "1      Bounty: Sturmbeorn!   a1z1-bountyboard2   QUESTS/A1Z1-BOUNTYBOARD2.DAT   \n",
+       "2      Bounty: Sturmbeorn!   a1z1-bountyboard2   QUESTS/A1Z1-BOUNTYBOARD2.DAT   \n",
+       "3      Bounty: Sturmbeorn!   a1z1-bountyboard2   QUESTS/A1Z1-BOUNTYBOARD2.DAT   \n",
+       "4      Bounty: Sturmbeorn!   a1z1-bountyboard2   QUESTS/A1Z1-BOUNTYBOARD2.DAT   \n",
+       "\n",
+       "               speaker_unit  \\\n",
+       "0  RETIREMENTCHARACTERQUEST   \n",
+       "1               BOUNTYBOARD   \n",
+       "2               BOUNTYBOARD   \n",
+       "3               BOUNTYBOARD   \n",
+       "4                       NaN   \n",
+       "\n",
+       "                                            unitfile  \\\n",
+       "0  MEDIA/UNITS/MONSTERS/NPC/RETIREMENTCHARACTERQU...   \n",
+       "1   MEDIA/UNITS/MONSTERS/BOUNTYBOARD/BOUNTYBOARD.DAT   \n",
+       "2   MEDIA/UNITS/MONSTERS/BOUNTYBOARD/BOUNTYBOARD.DAT   \n",
+       "3   MEDIA/UNITS/MONSTERS/BOUNTYBOARD/BOUNTYBOARD.DAT   \n",
+       "4                                                NaN   \n",
+       "\n",
+       "                                            raw_text  \n",
+       "0  You seem weary - perhaps you are in need of a ...  \n",
+       "1  BOUNTY!\\n\\nThe Sturmbeorn raiders are a threat...  \n",
+       "2  The Sturmbeorn have been conducting raids in n...  \n",
+       "3  The Empire thanks you for your valuable servic...  \n",
+       "4  Kill 10 |cFFA1D0FCSturmbeorn|u in the |cFFA1D0...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "torchlight_df = pd.read_csv(filepath + '/Torchlight II/data/dataset_200630.csv')\n",
+    "display(torchlight_df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "## Star Wars: Knights of The Old Republic"
    ]
   }
  ],
