Working on 1st Progress Report

--- a/notebooks/initial_base_data_exploration.ipynb
+++ b/notebooks/initial_base_data_exploration.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1884,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2010,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2134,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2399,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2419,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2732,7 +2732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2874,7 +2874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3023,7 +3023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3045,7 +3045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3069,35 +3069,35 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>character</th>\n",
-       "      <th>dialogues</th>\n",
+       "      <th>characters</th>\n",
+       "      <th>dialogue</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Confessor Jiji</td>\n",
-       "      <td>General\\n\\n\\n\\n\\n\\nFirst encounter\\n\\nWelcome,...</td>\n",
+       "      <td>\\n&lt;description&gt;General&lt;/description&gt;\\n\\n\\n\\nFi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Iselda</td>\n",
-       "      <td>Maps\\n\\n\\n\\n\\n\\nAncient Basin\\n\\nA map of the ...</td>\n",
+       "      <td>\\n&lt;description&gt;Maps&lt;/description&gt;\\n\\n\\n\\n&lt;desc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Leg Eater</td>\n",
-       "      <td>Charms\\n\\nFragile Heart\\n\\nThis is a precious ...</td>\n",
+       "      <td>\\n&lt;description&gt;Charms&lt;/description&gt;\\n\\nFragile...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        character                                          dialogues\n",
-       "0  Confessor Jiji  General\\n\\n\\n\\n\\n\\nFirst encounter\\n\\nWelcome,...\n",
-       "1          Iselda  Maps\\n\\n\\n\\n\\n\\nAncient Basin\\n\\nA map of the ...\n",
-       "2       Leg Eater  Charms\\n\\nFragile Heart\\n\\nThis is a precious ..."
+       "       characters                                           dialogue\n",
+       "0  Confessor Jiji  \\n<description>General</description>\\n\\n\\n\\nFi...\n",
+       "1          Iselda  \\n<description>Maps</description>\\n\\n\\n\\n<desc...\n",
+       "2       Leg Eater  \\n<description>Charms</description>\\n\\nFragile..."
       ]
      },
      "metadata": {},
@@ -3108,12 +3108,12 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 56 entries, 0 to 55\n",
+      "Int64Index: 55 entries, 0 to 54\n",
       "Data columns (total 2 columns):\n",
-      " #   Column     Non-Null Count  Dtype \n",
-      "---  ------     --------------  ----- \n",
-      " 0   character  56 non-null     object\n",
-      " 1   dialogues  56 non-null     object\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   characters  55 non-null     object\n",
+      " 1   dialogue    55 non-null     object\n",
       "dtypes: object(2)\n",
       "memory usage: 1.3+ KB\n",
       "None\n"
@@ -3129,12 +3129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Let's try to save it as a pkl, and also get a sample for the sample_data folder\n",
-    "hollow_sample = hollow_df.loc[:15]\n",
+    "hollow_sample = hollow_df # Since I made this dataset myself, I'll give it all!\n",
     "hollow_sample.to_pickle('../sample_data/hollow_sample.pkl')\n",
     "hollow_df.to_pickle('../private/pickled_dfs/hollow_knight.pkl') # ... Don't know WHAT changed, but okay..."
    ]
