Finished overview.ipynb

--- a/notebooks/initial_base_data_exploration.ipynb
+++ b/notebooks/initial_base_data_exploration.ipynb
@@ -1731,7 +1731,7 @@
     "***\n",
     "# Torchlight Data:\n",
     "\n",
-    "**PLEASE NOTE** This data is stored in both a .csv and a .json. Please see [orignal documentation](https://github.com/hmi-utwente/video-game-text-corpora/tree/master/Torchlight%20II) for more information (no, the script doesn't work, I tried). "
+    "**PLEASE NOTE** This data is stored in both a `.csv` and a `.json`. Please see [orignal documentation](https://github.com/hmi-utwente/video-game-text-corpora/tree/master/Torchlight%20II) for more information (no, the script doesn't work, I tried). I ended up using only the `.csv` because it was easier to work with and contained way more relevant information for my research."
    ]
   },
   {
@@ -2722,7 +2722,7 @@
     }
    ],
    "source": [
-    "# There's two csv's: one for the actual dialogue and other data, the other which contains additional metadata about the animations\n",
+    "# There's two csv's: one for the actual dialogue and other data, the other which contains additional metadata about the animations used with the dialogue\n",
     "kotor_df = pd.read_csv(filepath + '/Star Wars: Knights of the Old Republic/data/dataset_20200716.csv')\n",
     "meta_df = pd.read_csv(filepath + '/Star Wars: Knights of the Old Republic/data/dialoganimations.2da.csv')\n",
     "\n",
@@ -3040,7 +3040,7 @@
    "source": [
     "***\n",
     "## Hollow Knight\n",
-    "This is the csv I made from my HDialogueParser.py using techniques gathered from [*Fantastic Strings and Where to Find Them: The Quest for High-Quality Video Game Text Corpora*](https://judithvanstegeren.com/assets/2008-vanstegeren2020fantastic-preprint.pdf). I couldn't save it as a pkl there. I added more manual tagging using regex, details in the overview notebook."
+    "This is the `.csv` I made from my HDialogueParser.py using techniques gathered from [*Fantastic Strings and Where to Find Them: The Quest for High-Quality Video Game Text Corpora*](https://judithvanstegeren.com/assets/2008-vanstegeren2020fantastic-preprint.pdf). I couldn't save it as a `.pkl` there. I added more manual tagging using regex, details in the [overview notebook](https://github.com/Data-Science-for-Linguists-2022/Sociolinguistics-In-Video-Games/blob/main/notebooks/overview.ipynb)."
    ]
   },
   {
