Fixed overview.ipynb typo

--- a/notebooks/overview.ipynb
+++ b/notebooks/overview.ipynb
@@ -23,7 +23,7 @@
     "1. How do video game pragmatics and discourse differ from their real life counterparts? Does the player being the central figure drastically affect how they are realized?\n",
     "2. What (if any) techniques do video game writers employ which are different from other forms of writing?\n",
     "3. Do writers of fantasy video games take into consideration sociolinguistic elements such as dialect, culture, identity, region, etc. when writing their characters? If so, how?\n",
-    "4. Expanding upon question 3, are those considerations \"realistic\"; in other words, do writers commit pseudo-lingustics when trying to write for fantasy cultures? (e.g. \"This fantasy culture talks like this because they cannot understand the first person\" or something).\n",
+    "4. Expanding upon question 3, are those considerations \"realistic\"; in other words, do writers commit pseudo-linguistics when trying to write for fantasy cultures? (e.g. \"This fantasy culture talks like this because they cannot understand the first person\" or something).\n",
     "5. Are there differences between professional video game writers, and \"indie\" (low-budget, small studio) video game writers?\n",
     "***\n",
     "## Python Imports\n",
