Added data end-game in overview.ipynb final thoughts

--- a/notebooks/overview.ipynb
+++ b/notebooks/overview.ipynb
@@ -895,7 +895,9 @@
     "Or something similar. \n",
     "3. I suspect general world-building text/dialogue is more free form and less restricted to its genre. I also suspect there to be sociolinguistic trends when certain characters speak/write.\n",
     "4. I already know this one is true, but it will be nice to capture it with real data. In particular, with _The Elder Scrolls_ series, the games' \"races\" all derive heavily from real-world cultures. There is also a very obvious set of linguistic traits associated with one of these races that are explained with pseudo-linguistics. These traits show up in the books written by that race. I am going to have a lot of fun with this one.\n",
-    "5. I hope I can make meaning comparisons between the _Hollow Knight_ dataset against all the other datasets in some way. I hypothesize that the dialogue written in _Hollow Knight_ is much more directed towards the player with very little non-player-related dialogue due to the game's genre and team size. I might also suspect the quality of the writing differs, but I am unsure how to meaningully compare it when all groups involved are native English speakers."
+    "5. I hope I can make meaning comparisons between the _Hollow Knight_ dataset against all the other datasets in some way. I hypothesize that the dialogue written in _Hollow Knight_ is much more directed towards the player with very little non-player-related dialogue due to the game's genre and team size. I might also suspect the quality of the writing differs, but I am unsure how to meaningully compare it when all groups involved are native English speakers.\n",
+    "\n",
+    "I think these datasets and games will be perfect for the questions I am trying to answer. I expect my end-game data to be mostly examples of certain discourse/pragmatic features gotten from the DataFrames and charts highlighting trends in each DataFrame (word counts relating to quest type, trends in hapaxes frequency, etc). This project is definitely going to be analysis heavy, but I also don't expect there to be too many graphs, being more focused on case studies and comparisons within the datasets."
    ]
   }
  ],
