--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -9,7 +9,7 @@
     "[Alejandro Ciuba](alejandrociuba.github.io), alc307@pitt.edu\n",
     "***\n",
     "## Summary\n",
-    "This is a continuation from the previous Jupyter Notebook (`overview.ipynb`) where I begin to analyze the data in-accordance to my proposed research questions. I might change or modify the research questions here. As such, the original research question is stated at the beginning of its section and then changed appropriately throughout this notebook and updated in the main `README.md` file (not in `project_plan.md`).\n",
+    "This is a continuation from the previous Jupyter Notebook (`overview.ipynb`) where I begin to analyze the data in-accordance to my proposed research questions. I might change or modify the research questions here. As such, the original research question is stated at the beginning of its section and then changed appropriately throughout its section in the notebook and updated in the main `README.md` file (not in `project_plan.md`, to retain the initial ideas for this research).\n",
     "***"
    ]
   }
