Very lost on how to approach the first hypothesis

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -10,13 +10,96 @@
     "***\n",
     "## Summary\n",
     "This is a continuation from the previous Jupyter Notebook (`overview.ipynb`) where I begin to analyze the data in-accordance to my proposed research questions. I might change or modify the research questions here. As such, the original research question is stated at the beginning of its section and then changed appropriately throughout its section in the notebook and updated in the main `README.md` file (not in `project_plan.md`, to retain the initial ideas for this research).\n",
-    "***"
+    "***\n",
+    "## Python Imports & Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Necessary imports\n",
+    "import nltk\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pretty printing has been turned OFF\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Settings\n",
+    "# I looked this up so everything is prettier\n",
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "CSS = \"\"\"\n",
+    ".output {\n",
+    "    flex-direction: row;\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "HTML('<style>{}</style>'.format(CSS))\n",
+    "\n",
+    "# Use display(dataframe) to show\n",
+    "\n",
+    "%pprint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "## Question 1: How Do Video Game Pragmatics Differ From Their Real Life Counterpart?\n",
+    "This question is extremely broad. To answer this, I realized I would need comparative statistics of real-life pragmatics data to compare against the video game corpora. At the recommendation of [Dr. Na-Rae Han](https://sites.pitt.edu/~naraehan/), I decided to gather statistics provided from the [_Corpus of Contemporary American English_ (_COCA_)](https://www.english-corpora.org/coca/), for which the [_University of Pittsburgh_](https://www.pitt.edu) has a full-license. This means, that while I am using statistics gathered from data provided by _COCA_, I will **not** be publishing any dataset from said corpus and will **only** be using statistics necessary in my research.\n",
+    "\n",
+    "For this question, I have broken it up into three main hypothesis which I then test 1 by 1.\n",
+    "\n",
+    "### Hypothesis: Deictic words are infrequent when text/dialogue involves quests or objectives\n",
+    "My justification for this hypothesis is that, since games typically involve quests or objectives the player needs to complete, games, in an attempt to make things clearer for the player, often repeat themselves. They repeatedly state and name the exact locations/objectives/tasks/activities that the player must do in order to beat it.\n",
+    "\n",
+    "I have created a list of all the deictic words I could think of in English, called `deictic_words.txt` because (both annoyingly and surprisingly) `nltk` _does not_ have a list like that already.\n",
+    "\n",
+    "Firstly, to test this hypothesis, I will be using the _Torchlight II_ data as it is centered around and formatted explicitly for quest dialogue. I will then get frequency counts for the various deictic words in the dialogue."
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.10 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
