Added meta_kotor.pkl to the samples, worked on hypothesis, and updated progress report

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -71,10 +71,13 @@
     "\n",
     "For this question, I have broken it up into three main hypothesis which I then test 1 by 1.\n",
     "\n",
+    "### Hypothesis: Frequent Use Of The Second Person (_you_) And Mandative Verb Conjugation\n",
+    "According to data gotten from _COCA_ the second person pronoun _you_ occurs approxiamately 17711.44 times per million words in their _Spoken_ corpus.\n",
+    "\n",
     "### Hypothesis: Deictic words are infrequent when text/dialogue involves quests or objectives\n",
     "My justification for this hypothesis is that, since games typically involve quests or objectives the player needs to complete, games, in an attempt to make things clearer for the player, often repeat themselves. They repeatedly state and name the exact locations/objectives/tasks/activities that the player must do in order to beat it.\n",
     "\n",
-    "I have created a list of all the deictic words I could think of in English, called `deictic_words.txt` because (both annoyingly and surprisingly) `nltk` _does not_ have a list like that already.\n",
+    "I have created a list of all the deictic words I could think of in English, called `deictic_words.txt` because (both annoyingly and surprisingly) `nltk` does not have a list like that already.\n",
     "\n",
     "Firstly, to test this hypothesis, I will be using the _Torchlight II_ data as it is centered around and formatted explicitly for quest dialogue. I will then get frequency counts for the various deictic words in the dialogue."
    ]
