Finalized the repo for progress report II

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -72,12 +72,17 @@
     "For this question, I have broken it up into three main hypothesis which I then test 1 by 1.\n",
     "\n",
     "### Hypothesis: Frequent Use Of The Second Person (_you_) And Mandative Verb Conjugation\n",
-    "According to data gotten from _COCA_ the second person pronoun _you_ occurs approxiamately 17711.44 times per million words in their _Spoken_ corpus.\n",
+    "My justification for this hypothesis is that, since the game is designed around the player, the game will refer to the player the most. This means that the game (characters, text, etc.) will refer to the player character the most. While many instances might refer to the player by their \"name\" (e.g. _Revan_ is the name of the player's character in _KOTOR_), I believe most instances will refer to the character in the second person (\"you\").\n",
+    "According to data gotten from _COCA_ the second person pronoun (searched as '\\[you\\]') occurs approxiamately 17,720.87 times per million words in their _Spoken_ corpus.\n",
+    "\n",
+    "Other data that might be useful in this hypothesis:\n",
+    "- 12,166.38 per million words (might be better than just spoken, since spoken is gotten from only TV stations -> BIAS)\n",
+    "- 1,473.93 per million words regarding you + modal verb (\"you must,\" \"you shall\") Search: \"\\[you\\] \\_vm\" This could be interesting to investigate regarding frequent commands.\n",
     "\n",
     "### Hypothesis: Deictic words are infrequent when text/dialogue involves quests or objectives\n",
     "My justification for this hypothesis is that, since games typically involve quests or objectives the player needs to complete, games, in an attempt to make things clearer for the player, often repeat themselves. They repeatedly state and name the exact locations/objectives/tasks/activities that the player must do in order to beat it.\n",
     "\n",
-    "I have created a list of all the deictic words I could think of in English, called `deictic_words.txt` because (both annoyingly and surprisingly) `nltk` does not have a list like that already.\n",
+    "I am creating a list of all the deictic words I could think of in English, called `deictic_words.txt` because (both annoyingly and surprisingly) `nltk` does not have a list like that already.\n",
     "\n",
     "Firstly, to test this hypothesis, I will be using the _Torchlight II_ data as it is centered around and formatted explicitly for quest dialogue. I will then get frequency counts for the various deictic words in the dialogue."
    ]
