Worked on some research

--- a/notebooks/overview.ipynb
+++ b/notebooks/overview.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -873,13 +873,95 @@
       "memory usage: 1.3+ KB\n",
       "None\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>character</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Confessor Jiji</td>\n",
+       "      <td>\\n&lt;description&gt;General&lt;/description&gt;\\n\\n\\n\\nFi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Iselda</td>\n",
+       "      <td>\\n&lt;description&gt;Maps&lt;/description&gt;\\n\\n\\n\\n&lt;desc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Leg Eater</td>\n",
+       "      <td>\\n&lt;description&gt;Charms&lt;/description&gt;\\n\\nFragile...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Little Fool</td>\n",
+       "      <td>\\n&lt;description&gt;General&lt;/description&gt;\\n\\n\\n\\nFi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Millibelle the Banker/Millibelle the Thief</td>\n",
+       "      <td>\\n&lt;description&gt;General&lt;/description&gt;\\n\\n\\n\\n&lt;d...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    character  \\\n",
+       "0                              Confessor Jiji   \n",
+       "1                                      Iselda   \n",
+       "2                                   Leg Eater   \n",
+       "3                                 Little Fool   \n",
+       "4  Millibelle the Banker/Millibelle the Thief   \n",
+       "\n",
+       "                                                text  \n",
+       "0  \\n<description>General</description>\\n\\n\\n\\nFi...  \n",
+       "1  \\n<description>Maps</description>\\n\\n\\n\\n<desc...  \n",
+       "2  \\n<description>Charms</description>\\n\\nFragile...  \n",
+       "3  \\n<description>General</description>\\n\\n\\n\\nFi...  \n",
+       "4  \\n<description>General</description>\\n\\n\\n\\n<d...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Load the DataFrame from the .pkl file\n",
     "hollow_df = pd.read_pickle(FILEPATH + 'hollow_knight.pkl')\n",
     "display(hollow_df.head())\n",
-    "print(hollow_df.info())"
+    "print(hollow_df.info())\n",
+    "\n",
+    "# I'm going to rename the columns, I don't like them since they stick out from the rest of the other dataframes\n",
+    "hollow_df['text'] = hollow_df['dialogue']\n",
+    "hollow_df['character'] = hollow_df['characters']\n",
+    "hollow_df = hollow_df[['character', 'text']]\n",
+    "display(hollow_df.head())\n",
+    "\n",
+    "hollow_df.to_pickle(FILEPATH + 'hollow_knight.pkl')"
    ]
   },
   {
